# tuya_t5_pixel_ble

./: .gitignore  CMakeLists.txt  README.md  app_default.config  app_default.config.example  package-lock.json
config/: TUYA_T5AI_PIXEL.config
docs/: GITHUB_PUBLISH.md  USER_GUIDE.zh-CN.md
include/: pixel_agent_license.h.example
patches/: README.md  tuyaopen-ble-agent.patch
src/: led_font.h  pixel_agent_ble.c  pixel_agent_ble.h  pixel_agent_ble_name.c  pixel_agent_bridge.c  pixel_agent_bridge.h  pixel_agent_clawd.c  pixel_agent_clawd.h  tuya_main.c
src/pixel_art/: pixel_art_types.h
src/pixel_art/resource/: Cat_Meme.h  Italian_Beach.h  Italian_Pixel_Art.h  Nintendo_Mario.h  cute_cat_white.h  laughing_cat.h  mao.h  rolling_cat.h  smallbwop_bwop.h  super_mario_kart_mario.h  tong_tong_tong_sahur.h  wander.h  wooden_block.h
tools/pixel-agent-bridge-ble/: .gitignore  ble_bridge.py  bridge.js  install-hooks.js  list-ports.js  package-lock.json  package.json
tools/pixel-agent-bridge-ble/hooks/: agent-state-hook.js  cursor-agent-hook.js  state-hook.js
tools/pixel-agent-bridge-ble/lib/: hook-utils.js  keyboard.js  resolve-python.js  serial-ports.js  server-config.js
